--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
   get: ^4.1.4
-  flutter_typeahead: ^3.1.3
+  video_player: ^2.1.6
 
 dev_dependencies:
   flutter_test:
